# bssrdf

./: CMakeLists.txt  conanfile.txt
src/: Scene.cpp  Scene.h  bvh.cpp  bvh.h  main.cpp  mesh.cpp  mesh.h
